--- a/packages/unenv-preset/package.json
+++ b/packages/unenv-preset/package.json
@@ -47,7 +47,8 @@
 	"devDependencies": {
 		"@types/node": "^22.9.3",
 		"typescript": "catalog:default",
-		"unbuild": "^2.0.0"
+		"unbuild": "^2.0.0",
+		"wrangler": "3.95.0"
 	},
 	"peerDependencies": {
 		"unenv": "npm:unenv-nightly@2.0.0-20241204-140205-a5d5190",
