--- a/packages/unenv-preset/package.json
+++ b/packages/unenv-preset/package.json
@@ -28,9 +28,9 @@
 			"import": "./dist/index.mjs"
 		},
 		"./runtime/*": {
-			"types": "./runtime/*.d.ts",
-			"require": "./runtime/*.cjs",
-			"import": "./runtime/*.mjs"
+			"types": "./dist/runtime/*.d.ts",
+			"require": "./dist/runtime/*.cjs",
+			"import": "./dist/runtime/*.mjs"
 		}
 	},
 	"main": "./dist/index.cjs",
@@ -51,7 +51,7 @@
 		"wrangler": "3.95.0"
 	},
 	"peerDependencies": {
-		"unenv": "npm:unenv-nightly@2.0.0-20241204-140205-a5d5190",
+		"unenv": "*",
 		"workerd": "^1.20241205.0"
 	},
 	"peerDependenciesMeta": {
