Enable nodejs_compat by default in C3 templates

--- a/packages/create-cloudflare/templates/hello-world/js/wrangler.jsonc
+++ b/packages/create-cloudflare/templates/hello-world/js/wrangler.jsonc
@@ -2,6 +2,7 @@
 	"name": "<TBD>",
 	"main": "src/index.js",
 	"compatibility_date": "<TBD>",
+	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true,
 	},
