--- a/packages/create-cloudflare/templates-experimental/hello-world-durable-object-with-assets/ts/wrangler.jsonc
+++ b/packages/create-cloudflare/templates-experimental/hello-world-durable-object-with-assets/ts/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "<TBD>",
   "main": "src/index.ts",
   "compatibility_date": "<TBD>",
+  "compatibility_flags": ["nodejs_compat"],
   "migrations": [
     {
       "new_classes": [
