--- a/packages/create-cloudflare/templates-experimental/nuxt/templates/wrangler.jsonc
+++ b/packages/create-cloudflare/templates-experimental/nuxt/templates/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "<TBD>",
   "main": "./.output/server/index.mjs",
   "compatibility_date": "<TBD>",
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS",
     "directory": "./.output/public/"
