--- a/packages/create-cloudflare/templates-experimental/remix/templates/wrangler.toml
+++ b/packages/create-cloudflare/templates-experimental/remix/templates/wrangler.toml
@@ -1,6 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "<TBD>"
 compatibility_date = "<TBD>"
+compatibility_flags = ["nodejs_compat"]
 main = "./server.ts"
 assets = { directory = "./build/client" }
 
