--- a/packages/create-cloudflare/templates-experimental/svelte/templates/wrangler.jsonc
+++ b/packages/create-cloudflare/templates-experimental/svelte/templates/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "<TBD>",
   "main": ".svelte-kit/cloudflare/_worker.js",
   "compatibility_date": "<TBD>",
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS",
     "directory": ".svelte-kit/cloudflare"
