--- a/packages/create-cloudflare/templates-experimental/vue/templates/wrangler.jsonc
+++ b/packages/create-cloudflare/templates-experimental/vue/templates/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "<TBD>",
   "compatibility_date": "<TBD>",
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "directory": "./dist"
   },
