--- a/packages/create-cloudflare/templates/hello-world-durable-object/js/wrangler.jsonc
+++ b/packages/create-cloudflare/templates/hello-world-durable-object/js/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "<TBD>",
   "main": "src/index.js",
   "compatibility_date": "<TBD>",
+  "compatibility_flags": ["nodejs_compat"],
   "migrations": [
     {
       "new_classes": [
