feat: add miniflare boilerplate for email handlers

--- a/fixtures/worker-ts/tsconfig.json
+++ b/fixtures/worker-ts/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "es2021",
 		"lib": ["es2021"],
 		"module": "es2022",
-		"types": ["@cloudflare/workers-types/experimental"],
+		"types": ["./.wrangler/types/runtime.d.ts"],
 		"noEmit": true,
 		"isolatedModules": true,
 		"forceConsistentCasingInFileNames": true,
