--- a/fixtures/worker-ts/tsconfig.json
+++ b/fixtures/worker-ts/tsconfig.json
@@ -3,7 +3,8 @@
 		"target": "es2021",
 		"lib": ["es2021"],
 		"module": "es2022",
-		"types": ["./.wrangler/types/runtime.d.ts"],
+		"moduleResolution": "bundler",
+		"types": ["@cloudflare/workers-types"],
 		"noEmit": true,
 		"isolatedModules": true,
 		"forceConsistentCasingInFileNames": true,
