--- a/packages/create-cloudflare/src/frameworks/package.json
+++ b/packages/create-cloudflare/src/frameworks/package.json
@@ -14,6 +14,7 @@
 		"create-qwik": "1.12.0",
 		"create-vite": "6.1.1",
 		"create-remix": "2.15.3",
+		"create-react-router": "7.3.0",
 		"create-solid": "0.6.1",
 		"create-vue": "3.14.2",
 		"gatsby": "5.14.1",
