--- a/fixtures/worker-ts/wrangler.toml
+++ b/fixtures/worker-ts/wrangler.toml
@@ -4,6 +4,12 @@ compatibility_date = "2025-02-14"
 
 compatibility_flags = [ "nodejs_compat", "experimental" ]
 
+send_email = [
+   {name = "UNBOUND_SEND"},
+   {name = "SPECIFIC_SEND", destination_address = "something@exmaple.com"},
+   {name = "LIST_SEND", allowed_destination_addresses = ["something@exmaple.com", "else@exmaple.com"]},
+]
+
 [ai]
 binding = "AI"
 
