--- a/packages/vite-plugin-cloudflare/playground/spa-with-api/wrangler.toml
+++ b/packages/vite-plugin-cloudflare/playground/spa-with-api/wrangler.toml
@@ -1,4 +1,5 @@
 name = "api"
 main = "./api/index.ts"
 compatibility_date = "2024-12-30"
+compatibility_flags = ["assets_navigation_prefers_asset_serving"]
 assets = { not_found_handling = "single-page-application", binding = "ASSETS" }
