chore: move fixture to `email-worker`

--- a/fixtures/email-worker/package.json
+++ b/fixtures/email-worker/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "worker-ts",
+	"name": "email-worker",
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
@@ -7,6 +7,8 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250317.0",
+		"@types/mimetext": "^2.0.4",
+		"mimetext": "^3.0.27",
 		"wrangler": "workspace:*"
 	},
 	"volta": {
