--- a/fixtures/email-worker/tsconfig.json
+++ b/fixtures/email-worker/tsconfig.json
@@ -3,7 +3,8 @@
 		"target": "es2021",
 		"lib": ["es2021"],
 		"module": "es2022",
-		"types": ["@cloudflare/workers-types/experimental"],
+		"moduleResolution": "bundler",
+		"types": ["@cloudflare/workers-types"],
 		"noEmit": true,
 		"isolatedModules": true,
 		"forceConsistentCasingInFileNames": true,
