update do + assets template

--- a/packages/create-cloudflare/templates/hello-world-durable-object-with-assets/js/wrangler.jsonc
+++ b/packages/create-cloudflare/templates/hello-world-durable-object-with-assets/js/wrangler.jsonc
@@ -14,9 +14,9 @@
       }
     ]
   },
-	"migrations": [
+  "migrations": [
     {
-      "new_classes": [
+      "new_sqlite_classes": [
         "MyDurableObject"
       ],
       "tag": "v1"
